# vsi_sales

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  justfile  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  webpack.config.js
.github/workflows/: test.yml
apps/accounts/: admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_company_user_company.py  0003_plan_remove_company_address_and_more.py  0004_rename_adress_address.py  0005_alter_plan_price.py  0006_alter_address_city_alter_address_country_and_more.py  0007_alter_address_company.py  0008_rename_max_user_plan_max_users.py  0009_companymanager.py  0010_joinrequest.py  0011_alter_joinrequest_unique_together_and_more.py  0012_company_managers.py  0013_alter_joinrequest_unique_together_and_more.py  0014_alter_companymanager_unique_together_and_more.py
apps/accounts/templatetags/: account_tags.py  form_tags.py
apps/grn/: admin.py  apps.py  forms.py  models.py  tables.py  urls.py  views.py
apps/sales/: admin.py  context_processors.py  forms.py  models.py  tables.py  urls.py  views.py
apps/shared/: base_models.py  base_views.py  helper_methods.py
assets/: site-styles.js  site.js
assets/styles/: tailwind.css
core/: context_processors.py
dbapp/: models.py  urls.py  views.py
dbapp/migrations/: 0001_initial.py  0002_goods_urgency_alter_goods_reason_for_return.py
healthy_herbs/: asgi.py  celery.py  settings.py  settings_prod.py  urls.py  wsgi.py
static/: site-styles.js
static/dbapp/css/: base.css  (+2 more)
templates/: 403.html  404.html  500.html  base.html  error_page_template.html  oldbase.html  table.html
templates/account/: dashboard.html  email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/forms/: checkbox.html  select.html  text.html
templates/generic/: generic_form.html
templates/grn/: add_contact_person_form.html  confirm_delete.html  contact_persons.html  customer_form.html  customer_list.html  goods.html  goods_list.html  goods_table.html  grn_form.html  grn_list.html
templates/page/: base.html  messages.html  navbar.html  session_base.html  session_header.html  session_navbar.html  sidebar.html
vsi_business/: asgi.py  celery.py  settings.py  settings_prod.py  settings_test.py  urls.py  wsgi.py
weg_solutions/: asgi.py  base_models.py  celery.py  settings.py  settings_prod.py  urls.py  wsgi.py
(+52 files in other folders)
